PRevent overlap between add post button and posts.

--- a/frontend/src/style/posts.css
+++ b/frontend/src/style/posts.css
@@ -108,5 +108,5 @@
 }
 
 #category-name-top-page {
-    margin-left: 30vw;
+    margin-left: max(40%, 30vw);
 }
